--- a/todoApp/templates/todoApp/todo_list.html
+++ b/todoApp/templates/todoApp/todo_list.html
@@ -14,7 +14,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for todo in todos  %}
+            {% for todo in object_list  %}
             <tr>
                 <td>{{ todo.title }}</td>
                 <td>{{ todo.description }}</td>
@@ -44,7 +44,7 @@
                 	<a href="{% url 'todo_update' todo.id %} "> UPDATE</a>
                 </td> 
                 <td>
-                	<a href="{% url 'todo_delete' todo.id  %}" onclick="return confirm('are you sure?')"> DELETE</a>
+                	<a href="{% url 'todo_delete' todo.id  %} "> DELETE</a>
                 </td> 
             </tr>
         
